// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`when domain entity subclass extends non existent entity should have validation failures 1`] = `"Domain Entity Subclass SubclassName based on EntityName is invalid for identity rename because parent entity EntityName has more than one identity property."`;

exports[`when domain entity subclass extends non existent entity should have validation failures 2`] = `
Object {
  "column": 16,
  "line": 2,
  "tokenText": "SubclassName",
}
`;

exports[`when domain entity subclass renames base identity more than once should have validation failures 1`] = `"Domain Entity Subclass SubclassName based on EntityName is invalid for identity rename because parent entity EntityName has more than one identity property."`;

exports[`when domain entity subclass renames base identity more than once should have validation failures 2`] = `
Object {
  "column": 16,
  "line": 15,
  "tokenText": "SubclassName",
}
`;
